# modal_analysis

./: 20220531_Y_Axis_Pulse_6Nm_10ms.csv  20220531_Y_Axis_Pulse_9Nm_10ms.csv  20220531_Y_Axis_Pulse_9Nm_10ms_doublet.csv  20220531_Y_Axis_Pulse_9Nm_20ms.csv  20220531_Y_Axis_Pulse_9Nm_5ms.csv  CMakeLists.txt  main.cpp  test.csv
